lapr4-2021-gS4/LAPR4_BASE/eapli.base/base.core/src/main/java/eapli/base/form/antlr/formRequestedUnused/FormCheckerParser.java
// Generated from C:/Users/pedro/OneDrive/Documentos/Eng.Informática_Projects/2ºAno/LAPR/lapr4-2021-gS4/LAPR4_BASE/eapli.base/base.core/src/main/java/eapli/base/form/antlr/formRequested\FormChecker.g4 by ANTLR 4.9.1
package eapli.base.form.antlr.formRequestedUnused;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FormCheckerParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, TYPEDATE = 3, TYPEOPTIONALDATE = 4, TYPEINT = 5, TYPEOPTIONALINT = 6,
            TYPESTRING = 7, TYPEOPTIONALSTRING = 8, TYPEBOOL = 9, TYPEOPTIONALBOOL = 10, TYPEPHONENUMBER = 11,
            TYPEOPTIONALPHONENUMBER = 12, TYPEPOSTALCODE = 13, TYPEOPTIONALPOSTALCODE = 14,
            TYPENAME = 15, TYPEOPTIONALNAME = 16, TYPEADDRESS = 17, TYPEOPTIONALADDRESS = 18,
            TRUE = 19, FALSE = 20, NAME = 21, PHONENUMBER = 22, INT = 23, STRING = 24, DATE = 25,
            POSTALCODE = 26, NEWLINE = 27;
    public static final int
            RULE_lprog = 0, RULE_start = 1, RULE_allParameters = 2, RULE_parameterDate = 3,
            RULE_parameterOptionalDate = 4, RULE_parameterInt = 5, RULE_parameterOptionalInt = 6,
            RULE_parameterBool = 7, RULE_parameterOptionalBool = 8, RULE_parameterString = 9,
            RULE_parameterOptionalString = 10, RULE_parameterAddress = 11, RULE_parameterOptionalAddress = 12,
            RULE_parameterPhoneNumber = 13, RULE_parameterOptionalPhoneNumber = 14,
            RULE_parameterPostalCode = 15, RULE_parameterOptionalPostalCode = 16,
            RULE_parameterName = 17, RULE_parameterOptionalName = 18, RULE_namePossibility = 19,
            RULE_addressPosibility = 20, RULE_stringPossibility = 21, RULE_booleano = 22,
            RULE_optionalDate = 23, RULE_optionalName = 24, RULE_optionalAddress = 25,
            RULE_optionalPostalCode = 26, RULE_optionalString = 27, RULE_optionalBool = 28,
            RULE_optionalInt = 29, RULE_optionalPhoneNumber = 30;

    private static String[] makeRuleNames() {
        return new String[]{
                "lprog", "start", "allParameters", "parameterDate", "parameterOptionalDate",
                "parameterInt", "parameterOptionalInt", "parameterBool", "parameterOptionalBool",
                "parameterString", "parameterOptionalString", "parameterAddress", "parameterOptionalAddress",
                "parameterPhoneNumber", "parameterOptionalPhoneNumber", "parameterPostalCode",
                "parameterOptionalPostalCode", "parameterName", "parameterOptionalName",
                "namePossibility", "addressPosibility", "stringPossibility", "booleano",
                "optionalDate", "optionalName", "optionalAddress", "optionalPostalCode",
                "optionalString", "optionalBool", "optionalInt", "optionalPhoneNumber"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "' '", "': '", "'Date'", "'OptionalDate'", "'Integer'", "'OptionalInteger'",
                "'String'", "'OptionalString'", "'Bool'", "'OptionalBool'", "'PhoneNumber'",
                "'OptionalPhoneNumber'", "'PostalCode'", "'OptionalPostalCode'", "'Name'",
                "'OptionalName'", "'Address'", "'OptionalAddress'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, "TYPEDATE", "TYPEOPTIONALDATE", "TYPEINT", "TYPEOPTIONALINT",
                "TYPESTRING", "TYPEOPTIONALSTRING", "TYPEBOOL", "TYPEOPTIONALBOOL", "TYPEPHONENUMBER",
                "TYPEOPTIONALPHONENUMBER", "TYPEPOSTALCODE", "TYPEOPTIONALPOSTALCODE",
                "TYPENAME", "TYPEOPTIONALNAME", "TYPEADDRESS", "TYPEOPTIONALADDRESS",
                "TRUE", "FALSE", "NAME", "PHONENUMBER", "INT", "STRING", "DATE", "POSTALCODE",
                "NEWLINE"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "FormChecker.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public FormCheckerParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class LprogContext extends ParserRuleContext {
        public List<StartContext> start() {
            return getRuleContexts(StartContext.class);
        }

        public StartContext start(int i) {
            return getRuleContext(StartContext.class, i);
        }

        public LprogContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_lprog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterLprog(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitLprog(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitLprog(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LprogContext lprog() throws RecognitionException {
        LprogContext _localctx = new LprogContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_lprog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(63);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(62);
                            start();
                        }
                    }
                    setState(65);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEDATE) | (1L << TYPEOPTIONALDATE) | (1L << TYPEINT) | (1L << TYPEOPTIONALINT) | (1L << TYPESTRING) | (1L << TYPEOPTIONALSTRING) | (1L << TYPEBOOL) | (1L << TYPEOPTIONALBOOL) | (1L << TYPEPHONENUMBER) | (1L << TYPEOPTIONALPHONENUMBER) | (1L << TYPEPOSTALCODE) | (1L << TYPEOPTIONALPOSTALCODE) | (1L << TYPENAME) | (1L << TYPEOPTIONALNAME) | (1L << TYPEADDRESS) | (1L << TYPEOPTIONALADDRESS))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StartContext extends ParserRuleContext {
        public AllParametersContext allParameters() {
            return getRuleContext(AllParametersContext.class, 0);
        }

        public TerminalNode NEWLINE() {
            return getToken(FormCheckerParser.NEWLINE, 0);
        }

        public StartContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_start;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterStart(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitStart(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitStart(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StartContext start() throws RecognitionException {
        StartContext _localctx = new StartContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_start);
        try {
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(67);
                    allParameters();
                    setState(68);
                    match(NEWLINE);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AllParametersContext extends ParserRuleContext {
        public ParameterDateContext parameterDate() {
            return getRuleContext(ParameterDateContext.class, 0);
        }

        public ParameterStringContext parameterString() {
            return getRuleContext(ParameterStringContext.class, 0);
        }

        public ParameterIntContext parameterInt() {
            return getRuleContext(ParameterIntContext.class, 0);
        }

        public ParameterBoolContext parameterBool() {
            return getRuleContext(ParameterBoolContext.class, 0);
        }

        public ParameterPhoneNumberContext parameterPhoneNumber() {
            return getRuleContext(ParameterPhoneNumberContext.class, 0);
        }

        public ParameterPostalCodeContext parameterPostalCode() {
            return getRuleContext(ParameterPostalCodeContext.class, 0);
        }

        public ParameterNameContext parameterName() {
            return getRuleContext(ParameterNameContext.class, 0);
        }

        public ParameterAddressContext parameterAddress() {
            return getRuleContext(ParameterAddressContext.class, 0);
        }

        public ParameterOptionalDateContext parameterOptionalDate() {
            return getRuleContext(ParameterOptionalDateContext.class, 0);
        }

        public ParameterOptionalBoolContext parameterOptionalBool() {
            return getRuleContext(ParameterOptionalBoolContext.class, 0);
        }

        public ParameterOptionalIntContext parameterOptionalInt() {
            return getRuleContext(ParameterOptionalIntContext.class, 0);
        }

        public ParameterOptionalStringContext parameterOptionalString() {
            return getRuleContext(ParameterOptionalStringContext.class, 0);
        }

        public ParameterOptionalAddressContext parameterOptionalAddress() {
            return getRuleContext(ParameterOptionalAddressContext.class, 0);
        }

        public ParameterOptionalNameContext parameterOptionalName() {
            return getRuleContext(ParameterOptionalNameContext.class, 0);
        }

        public ParameterOptionalPhoneNumberContext parameterOptionalPhoneNumber() {
            return getRuleContext(ParameterOptionalPhoneNumberContext.class, 0);
        }

        public ParameterOptionalPostalCodeContext parameterOptionalPostalCode() {
            return getRuleContext(ParameterOptionalPostalCodeContext.class, 0);
        }

        public AllParametersContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_allParameters;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterAllParameters(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitAllParameters(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitAllParameters(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AllParametersContext allParameters() throws RecognitionException {
        AllParametersContext _localctx = new AllParametersContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_allParameters);
        try {
            setState(86);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case TYPEDATE:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(70);
                    parameterDate();
                }
                break;
                case TYPESTRING:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(71);
                    parameterString();
                }
                break;
                case TYPEINT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(72);
                    parameterInt();
                }
                break;
                case TYPEBOOL:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(73);
                    parameterBool();
                }
                break;
                case TYPEPHONENUMBER:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(74);
                    parameterPhoneNumber();
                }
                break;
                case TYPEPOSTALCODE:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(75);
                    parameterPostalCode();
                }
                break;
                case TYPENAME:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(76);
                    parameterName();
                }
                break;
                case TYPEADDRESS:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(77);
                    parameterAddress();
                }
                break;
                case TYPEOPTIONALDATE:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(78);
                    parameterOptionalDate();
                }
                break;
                case TYPEOPTIONALBOOL:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(79);
                    parameterOptionalBool();
                }
                break;
                case TYPEOPTIONALINT:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(80);
                    parameterOptionalInt();
                }
                break;
                case TYPEOPTIONALSTRING:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(81);
                    parameterOptionalString();
                }
                break;
                case TYPEOPTIONALADDRESS:
                    enterOuterAlt(_localctx, 13);
                {
                    setState(82);
                    parameterOptionalAddress();
                }
                break;
                case TYPEOPTIONALNAME:
                    enterOuterAlt(_localctx, 14);
                {
                    setState(83);
                    parameterOptionalName();
                }
                break;
                case TYPEOPTIONALPHONENUMBER:
                    enterOuterAlt(_localctx, 15);
                {
                    setState(84);
                    parameterOptionalPhoneNumber();
                }
                break;
                case TYPEOPTIONALPOSTALCODE:
                    enterOuterAlt(_localctx, 16);
                {
                    setState(85);
                    parameterOptionalPostalCode();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterDateContext extends ParserRuleContext {
        public TerminalNode TYPEDATE() {
            return getToken(FormCheckerParser.TYPEDATE, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public TerminalNode DATE() {
            return getToken(FormCheckerParser.DATE, 0);
        }

        public ParameterDateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterDate;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterParameterDate(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitParameterDate(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterDate(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterDateContext parameterDate() throws RecognitionException {
        ParameterDateContext _localctx = new ParameterDateContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_parameterDate);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(TYPEDATE);
                setState(89);
                match(T__0);
                setState(90);
                match(STRING);
                setState(91);
                match(T__1);
                setState(92);
                match(DATE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterOptionalDateContext extends ParserRuleContext {
        public TerminalNode TYPEOPTIONALDATE() {
            return getToken(FormCheckerParser.TYPEOPTIONALDATE, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public OptionalDateContext optionalDate() {
            return getRuleContext(OptionalDateContext.class, 0);
        }

        public ParameterOptionalDateContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterOptionalDate;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener)
                ((FormCheckerListener) listener).enterParameterOptionalDate(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener)
                ((FormCheckerListener) listener).exitParameterOptionalDate(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterOptionalDate(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterOptionalDateContext parameterOptionalDate() throws RecognitionException {
        ParameterOptionalDateContext _localctx = new ParameterOptionalDateContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_parameterOptionalDate);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                match(TYPEOPTIONALDATE);
                setState(95);
                match(T__0);
                setState(96);
                match(STRING);
                setState(97);
                match(T__1);
                setState(98);
                optionalDate();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterIntContext extends ParserRuleContext {
        public TerminalNode TYPEINT() {
            return getToken(FormCheckerParser.TYPEINT, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public TerminalNode INT() {
            return getToken(FormCheckerParser.INT, 0);
        }

        public ParameterIntContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterInt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterParameterInt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitParameterInt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterInt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterIntContext parameterInt() throws RecognitionException {
        ParameterIntContext _localctx = new ParameterIntContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_parameterInt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(TYPEINT);
                setState(101);
                match(T__0);
                setState(102);
                match(STRING);
                setState(103);
                match(T__1);
                setState(104);
                match(INT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterOptionalIntContext extends ParserRuleContext {
        public TerminalNode TYPEOPTIONALINT() {
            return getToken(FormCheckerParser.TYPEOPTIONALINT, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public OptionalIntContext optionalInt() {
            return getRuleContext(OptionalIntContext.class, 0);
        }

        public ParameterOptionalIntContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterOptionalInt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener)
                ((FormCheckerListener) listener).enterParameterOptionalInt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener)
                ((FormCheckerListener) listener).exitParameterOptionalInt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterOptionalInt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterOptionalIntContext parameterOptionalInt() throws RecognitionException {
        ParameterOptionalIntContext _localctx = new ParameterOptionalIntContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_parameterOptionalInt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                match(TYPEOPTIONALINT);
                setState(107);
                match(T__0);
                setState(108);
                match(STRING);
                setState(109);
                match(T__1);
                setState(110);
                optionalInt();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterBoolContext extends ParserRuleContext {
        public TerminalNode TYPEBOOL() {
            return getToken(FormCheckerParser.TYPEBOOL, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public BooleanoContext booleano() {
            return getRuleContext(BooleanoContext.class, 0);
        }

        public ParameterBoolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterBool;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterParameterBool(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitParameterBool(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterBool(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterBoolContext parameterBool() throws RecognitionException {
        ParameterBoolContext _localctx = new ParameterBoolContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_parameterBool);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                match(TYPEBOOL);
                setState(113);
                match(T__0);
                setState(114);
                match(STRING);
                setState(115);
                match(T__1);
                setState(116);
                booleano();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterOptionalBoolContext extends ParserRuleContext {
        public TerminalNode TYPEOPTIONALBOOL() {
            return getToken(FormCheckerParser.TYPEOPTIONALBOOL, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public OptionalBoolContext optionalBool() {
            return getRuleContext(OptionalBoolContext.class, 0);
        }

        public ParameterOptionalBoolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterOptionalBool;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener)
                ((FormCheckerListener) listener).enterParameterOptionalBool(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener)
                ((FormCheckerListener) listener).exitParameterOptionalBool(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterOptionalBool(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterOptionalBoolContext parameterOptionalBool() throws RecognitionException {
        ParameterOptionalBoolContext _localctx = new ParameterOptionalBoolContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_parameterOptionalBool);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                match(TYPEOPTIONALBOOL);
                setState(119);
                match(T__0);
                setState(120);
                match(STRING);
                setState(121);
                match(T__1);
                setState(122);
                optionalBool();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterStringContext extends ParserRuleContext {
        public TerminalNode TYPESTRING() {
            return getToken(FormCheckerParser.TYPESTRING, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public StringPossibilityContext stringPossibility() {
            return getRuleContext(StringPossibilityContext.class, 0);
        }

        public ParameterStringContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameterString;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).enterParameterString(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FormCheckerListener) ((FormCheckerListener) listener).exitParameterString(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FormCheckerVisitor)
                return ((FormCheckerVisitor<? extends T>) visitor).visitParameterString(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterStringContext parameterString() throws RecognitionException {
        ParameterStringContext _localctx = new ParameterStringContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_parameterString);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                match(TYPESTRING);
                setState(125);
                match(T__0);
                setState(126);
                match(STRING);
                setState(127);
                match(T__1);
                setState(128);
                stringPossibility();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
            System.out.println("Erro Semantico");
            throw new IllegalArgumentException();
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterOptionalStringContext extends ParserRuleContext {
        public TerminalNode TYPEOPTIONALSTRING() {
            return getToken(FormCheckerParser.TYPEOPTIONALSTRING, 0);
        }

        public TerminalNode STRING() {
            return getToken(FormCheckerParser.STRING, 0);
        }

        public OptionalStringContext optionalString() {
            return getRuleContext(OptionalStringContext.class, 0);
        }
